@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-05-14T16:23:57Z",
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
+  "count_prev_day_inc" : 0,
+  "count_prev_day_dec" : 4,
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
+  "uniques_prev_day_inc" : 0,
+  "uniques_prev_day_dec" : 1
+}
