@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-05-12T08:23:06Z",
+  "timestamp" : "2022-05-14T16:23:57Z",
   "count_outdated" : 146,
   "uniques_outdated" : 99,
-  "count" : 258,
-  "uniques" : 151,
+  "count" : 254,
+  "uniques" : 150,
   "clones" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
-      "count": 12,
+      "count": 8,
       "count_minmax": [ 4, 12 ],
-      "uniques": 7,
+      "uniques": 6,
       "uniques_minmax": [ 3, 7 ]
     },
     {
