@@ -1,11 +1,11 @@
 {
-  "count": 112,
+  "count": 108,
   "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-04-30T00:00:00Z",
-      "count": 12,
-      "uniques": 7
+      "count": 8,
+      "uniques": 6
     },
     {
       "timestamp": "2022-05-01T00:00:00Z",
